# MarketSeer

./: .gitignore  README.md  Todo.md  db.py  main.py  requirements.txt  review.md
analysis/: __init__.py
backend/: .env.example  .gitignore  README.md  config.py  logger.py  pyproject.toml  run.py
backend/app/: __init__.py  config.py
backend/app/data_sources/: __init__.py  akshare_client.py  base.py  client_manager.py  efinance_client.py
backend/app/mapping/: __init__.py  base_mapper.py  lhb_mapping.py  stock_info_mapping.py  stock_mapping.py
backend/app/mapping/dragon_tiger/: daily_brokerage_config.py  daily_brokerage_mapping.py  daily_config.py  daily_mapping.py
backend/app/mapping/markets/: daily_quote_config.py  daily_quote_mapping.py
backend/app/mapping/stocks/: config.py  info.py  info_config.py  info_mapping.py
backend/app/models/: ARCHITECTURE.md  __init__.py  base.py  lhb_model.py  stock_info.py  stock_model.py
backend/app/models/dragon_tiger/: daily_active_brokerage.py  daily_dragon_tiger.py
backend/app/models/lhb/: __init__.py  daily_lhb.py  data.csv  weekly_lhb.py
backend/app/models/markets/: daily_quote.py
backend/app/models/stock/: __init__.py  intraday_data.py  stock_info.py
backend/app/models/stocks/: info.py
backend/app/repository/: __init__.py  base.py  stock_info_repository.py
backend/app/repository/dragon_tiger/: daily_active_brokerage.py  daily_dragon_tiger.py
backend/app/repository/markets/: daily_quote.py
backend/app/repository/stocks/: info.py
backend/app/routes/: __init__.py  dragon_tiger.py  lhb.py  stock.py  stocks.py
backend/app/scheduler/: __init__.py
backend/app/scheduler/jobs/: __init__.py  dragon_tiger.py  market_quote.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  active_brokerage_service.py  base_service.py  daily_update_service.py  dragon_tiger_service.py  intraday_service.py  lhb_service.py  market_quote_service.py  stock_service.py  stocks_service.py
backend/app/tasks/: scheduler.py
backend/app/tasks/jobs/: daily_update.py  intraday_update.py  stock_update.py
backend/app/utils/: __init__.py  formatter.py  logger.py  stock.py  stock_helper.py  time_helper.py  timer.py  trading_calendar.py
backend/scripts/: README.md  download_akshare_data.py  range_upsert_daily_active_brokerage.py  range_upsert_daily_dragon_tiger.py
backend/tests/: notebook.ipynb  test_stock_service.py
config/: .env.example  __init__.py  config.yaml  database.py  logging.yaml  settings.py  settings.yaml
data/: Out_10.csv  Out_9.csv  __init__.py  akshare_client.py  efinance_client.py  stock_info_aggregator.py
data_sources/: __init__.py  akshare_client.py  efinance_client.py  helpers.py
database/: __init__.py
db/: init_stock_db.sql
doc/: Dev.md  Fields.md  history.md  structure.md
docs/: akshare_a_stock_metadata_plan.md  akshare_ingest.md  database_setup.md  pipeline_init.md  workflows.md
exceptions/: __init__.py
finance/: __init__.py  main.py
frontend/: .env  .env.example  README.md  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
jupyter/: lhb_detail.ipynb  lhb_institution_tracking.ipynb  lhb_stock_statistic.ipynb  stock_info.ipynb  test.ipynb
models/: __init__.py  base.py  market.py  stock.py
pipeline/: helper.py  ingest.py  init.py  transform.py  upsert_stock_basic.py
schema/: raw_stock_source.sql  stock_basic.sql
scripts/: create_stocks_table.sql  init_db.py  run_workflow.py  sync_stock_info.py
src/: __init__.py
test/: __init__.py  run_tests.py  test_models.py  (+1 more)
(+86 files in other folders)
